# dsan-5400-group3

./: .gitignore  CHANGELOG.md  LICENSE  README.md  discussion.md  pyproject.toml  pytest.ini
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: cleaning.ipynb
organized_scripts/: run_analysis.py  run_preprocessing.py  run_scraping.py  run_sentiment.py
scripts/: add_pronoun_gender.py  balance_gender_and_split.py  clean_data.py  download_data.py  preprocessing.py  run_analysis.py  run_sentiment.py  run_stats.py  scrape_data.py
src/dsan_5400_group3/: __init__.py
src/dsan_5400_group3/analysis/: analysis_runner.py  plots.py  stats.py  summaries.py
src/dsan_5400_group3/preprocessing/: cleaner.py  loader.py  nlp_processor.py  preprocessing_runner.py  pronoun_annotator.py  splitter.py
src/dsan_5400_group3/scraping/: fetcher.py  scraping_runner.py  splitter.py  utils.py
src/dsan_5400_group3/sentiment/: roberta.py  sentiment_runner.py  textblob.py  vader.py
tests/: conftest.py  test_dsan_5400_group3.py
tests/analysis/: test_analysis_runner.py  test_units_and_installation.py
tests/preprocessing/: test_preprocessing.py  test_preprocessing_runner.py
tests/scraping/: test_scraping.py  test_scraping_runner.py
tests/sentiment/: test_sentiment.py  test_sentiment_runner.py
