[tool.poetry]
name = "dsan_5400_group3"
version = "0.1.0"
description = "final project"
authors = ["dsan-5400-group3"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
