[tool.poetry]
name = "dsan_5400_group3"
version = "0.1.0"
description = "final project"
authors = [
    "Laurent Julia Calac lj589@georgetown.edu",
    "Jiayuan Gong jg2493@georgetown.edu",
    "Walter Hall wbh39@georgetown.edu",
    "Jing Tan jt1573@georgetown.edu",
    "Hung Tran mt1854@georgetown.edu"
]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
numpy = "^1.26.0"
spacy = "^3.7.0"
transformers = "^4.39.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
wikipedia-api = "^0.6.0"
vaderSentiment = "^3.3.2"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.0"
bertopic = "^0.16.0"
gensim = "^4.3.0"
textblob = "^0.17.1"
nltk = "^3.8.0"
tqdm = "^4.66.0"
gdown = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
